--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amazon</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
       integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      referrerpolicy="no-referrer"/>
+   
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -47,7 +45,7 @@
         </div>
         <div class="nav-cart border">
           <i class="fa-solid fa-cart-shopping"></i>
-          Cart
+          <a href="cart.html">Cart</a> 
         </div>
       </div>
       <div class="panel">
@@ -98,10 +96,7 @@
       <div class="box3 box">
         <div class="box-content">
           <h2>Home & Kitchen</h2>
-          <div
-            class="img-box"
-            style="background-image: url('box3_image.jpg')"
-          ></div>
+          <div class="img-box" style="background-image: url('box3_image.jpg')"></div>
           <p>See more</p>
         </div>
       </div>
